@@ -34,8 +34,8 @@ CONFIGURE_ARGS+=--with-config=${CONFDIR}/qico.conf \
 CONFIGURE_TARGET=--build=${MACHINE_ARCH}-portbld-freebsd${OSREL}
 
 DOCS=		Changes FAQ README
-EXAMPLES=	fts-0001 onchat qhistory qico.xpm qlinks sfreq \
-		stat.run synctime tossing
+EXAMPLES=	onchat qhistory qico.xpm qlinks sfreq \
+		stat.run synctime tossing test.pl
 
 MAN8=		qcc.8 qctl.8 qico.8
 
